[gd_scene load_steps=7 format=3 uid="uid://dnndecgdkcffm"]

[ext_resource type="Script" uid="uid://gvajp31vuy31" path="res://ui/seasonal/WinterCourtUI.gd" id="1_cn012"]
[ext_resource type="Script" uid="uid://cni5gdnpbb1v2" path="res://data/resources/SeasonalCardResource.gd" id="2_agvwj"]
[ext_resource type="PackedScene" uid="uid://d0px2w8n5r1lv" path="res://ui/seasonal/SeasonalCardUi.tscn" id="2_xo3mn"]
[ext_resource type="Resource" uid="uid://dg10eqygin8xg" path="res://data/resources/Winter Cards/Card_Winter_Feast.tres" id="3_q5t2d"]
[ext_resource type="Resource" uid="uid://dcppndmvmf63e" path="res://data/resources/Winter Cards/Card_Winter_Recruit.tres" id="4_4y4fd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_burden"]
bg_color = Color(0.12, 0.15, 0.2, 0.9)
border_width_bottom = 2
border_color = Color(0.3, 0.4, 0.5, 1)

[node name="WinterCourtUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cn012")
available_court_cards = Array[ExtResource("2_agvwj")]([ExtResource("3_q5t2d"), ExtResource("4_4y4fd")])
card_prefab = ExtResource("2_xo3mn")

[node name="Background" type="Panel" parent="."]
self_modulate = Color(0.16, 0.22, 0.3, 0.98)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Stratum1_Burden" type="PanelContainer" parent="MainLayout"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_burden")

[node name="Margin" type="MarginContainer" parent="MainLayout/Stratum1_Burden"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="MainLayout/Stratum1_Burden/Margin"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="SeverityLabel" type="Label" parent="MainLayout/Stratum1_Burden/Margin/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9739297, 0.96263725, 0.95415837, 1)
theme_override_font_sizes/font_size = 20
text = "Winter Severity: Normal"

[node name="VSeparator" type="VSeparator" parent="MainLayout/Stratum1_Burden/Margin/HBox"]
layout_mode = 2

[node name="DeficitContainer" type="VBoxContainer" parent="MainLayout/Stratum1_Burden/Margin/HBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Stratum2_Hall" type="PanelContainer" parent="MainLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MainLayout/Stratum2_Hall"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ActionPointsLabel" type="Label" parent="MainLayout/Stratum2_Hall/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.7, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "Dynastic Attention: 2 / 2"
horizontal_alignment = 1

[node name="CardScroll" type="ScrollContainer" parent="MainLayout/Stratum2_Hall/VBox"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 3

[node name="Centerer" type="CenterContainer" parent="MainLayout/Stratum2_Hall/VBox/CardScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardsContainer" type="HBoxContainer" parent="MainLayout/Stratum2_Hall/VBox/CardScroll/Centerer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Stratum3_Bloodline" type="PanelContainer" parent="MainLayout"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="MainLayout/Stratum3_Bloodline"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="MainLayout/Stratum3_Bloodline/Margin"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="JarlNameLabel" type="Label" parent="MainLayout/Stratum3_Bloodline/Margin/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Jarl Bjorn (Age 54)"

[node name="JarlStatusLabel" type="Label" parent="MainLayout/Stratum3_Bloodline/Margin/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Vigorous"

[node name="VSeparator" type="VSeparator" parent="MainLayout/Stratum3_Bloodline/Margin/HBox"]
layout_mode = 2

[node name="HeirStatusLabel" type="Label" parent="MainLayout/Stratum3_Bloodline/Margin/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Succession Secure"

[node name="BottomBar" type="MarginContainer" parent="MainLayout"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="EndWinterButton" type="Button" parent="MainLayout/BottomBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "The Ice Melts..."
